# vs-mgr

./: README.md  archiver.py  backup.py  config.py  http_client.py  interfaces.py  main.py  pyproject.toml  services.py  system.py  ui.py  updater.py  versioning.py  vs_manage.sh
src/vs_mgr/: __init__.py  archiver.py  backup.py  commands.py  compressor.py  config.py  errors.py  filesystem.py  http_client.py  process_runner.py  services.py  system.py  updater.py  versioning.py
vs_manager/: cli.py  commands.py  filesystem.py  process_runner.py  updater.py  versioning.py
