[project]
name = "vs-mgr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chronophylos", email = "nikolai@chronophylos.com" }]
requires-python = ">=3.12"
dependencies = [
    "packaging>=24.2",
    "pydantic>=2.11.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "zstandard>=0.23.0",
]

[dependency-groups]
dev = ["ruff>=0.11.4"]

[project.scripts]
vs-mgr = "vs_mgr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
